# VRIntro

./: .gitignore  AddMSVCPrecompiledHeader.cmake  AddPCH.cmake  CMakeLists.txt  Common.cmake  Components.cmake  ConditionalSources.cmake  CopySharedLibraries.cmake  CreateImportTargetHelpers.cmake  DefinePostBuildResourceCopyRules.cmake  FindAntTweakBar.cmake  FindAssimp.cmake  FindBoost.cmake  FindCURL.cmake  FindCinder.cmake  FindCrossroads.cmake  FindCyapi.cmake  FindDotNetFrameworkSdk.cmake  FindEigen.cmake  FindFbxSdk.cmake  FindFlatBuffers.cmake  FindFreeGLUT.cmake  FindFreeImage.cmake  FindFreespace.cmake  FindGlew.cmake  FindHalide.cmake  FindInf2Cat.cmake  FindLeap.cmake  FindLibUSB.cmake  FindLibUVC.cmake  FindNSS.cmake  FindOculusSDK.cmake  FindOpenGL.cmake  FindOpenSSL.cmake  FindPackageHandleStandardArgs.cmake  FindPoly2Tri.cmake  FindProtobuf.cmake  FindPythonLibs.cmake  FindSDL.cmake  FindSFML.cmake  (+25 more)
cmake-module/: ConditionalSources.cmake  DefinePostBuildResourceCopyRules.cmake  FindAntTweakBar.cmake  FindBullet.cmake  FindCinder.cmake  FindFlatBuffers.cmake  FindFreeGLUT.cmake  FindFreespace.cmake  FindGlew.cmake  FindIrrklang.cmake  FindLeap.cmake  FindLibUSB.cmake  FindNSS.cmake  FindPythonLibs.cmake  FindSDL.cmake  FindWebsocketPP.cmake  FixupQt5Targets.cmake  LeapCMakeTemplates.cmake  ListSubdirectories.cmake  SelectConfigurations.cmake  TargetImportedLibraries.cmake  TargetStrip.cmake  UseJavaEx.cmake
source/: APIFrameSupplier.cpp  APIFrameSupplier.h  CMakeLists.txt  FlyingLayer.cpp  FlyingLayer.h  FractalLayer.cpp  GridLayer.cpp  GridLayer.h  HandLayer.cpp  HandLayer.h  HelpLayer.cpp  HelpLayer.h  InteractionLayer.cpp  Interactionlayer.h  LeapListener.cpp  LeapListener.h  MessageLayer.cpp  MessageLayer.h  Mirror.cpp  Mirror.h  PassthroughLayer.cpp  PassthroughLayer.h  PlatformInitializerMac.h  PlatformInitializerWin.cpp  PlatformInitializerWin.h  PrecisionTimer.h  QuadsLayer.cpp  QuadsLayer.h  SampleListener.cpp  SampleListener.h  ShapesApplication.cpp  ShapesApplication.h  SpaceLayer.cpp  SpaceLayer.h  SpheresLayer.cpp  SpheresLayer.h  VRIntroApp.cpp  VRIntroApp.h  lighting-frag.glsl  main.cpp  (+4 more)
source/VRIntro/: APIFrameSupplier.cpp  APIFrameSupplier.h  CMakeLists.txt  LeapListener.cpp  LeapListener.h  RunMirrored.bat  main.cpp  stdafx.h
source/VRIntro/shaders/: avatar-frag.glsl  avatar-vert.glsl  passthrough-frag.glsl  solid-frag.glsl  trail-vert.glsl  transparent-frag.glsl  transparent-vert.glsl
source/VRIntroLib/: CMakeLists.txt  Config.h.in  FlyingLayer.cpp  FlyingLayer.h  FractalLayer.cpp  FractalLayer.h  GridLayer.cpp  GridLayer.h  HandLayer.cpp  HandLayer.h  IFrameSupplier.h  InteractionLayer.cpp  Interactionlayer.h  MathUtility.cpp  MathUtility.h  MessageLayer.cpp  MessageLayer.h  Mirror.cpp  Mirror.h  PassthroughLayer.cpp  PassthroughLayer.h  PhysicsLayer.cpp  PhysicsLayer.h  PlatformInitializer.h  PlatformInitializerMac.mm  PlatformInitializerWin.cpp  PlayerState.cpp  PlayerState.h  QuadsLayer.cpp  QuadsLayer.h  SpaceLayer.cpp  SpaceLayer.h  SpheresLayer.cpp  SpheresLayer.h  VRIntroApp.cpp  VRIntroApp.h  WebSocketClient.cpp  WebSocketClient.h
source/VRIntroLib/contrib/: easywsclient.cpp  easywsclient.hpp  json11.cpp  json11.hpp
source/VRIntroLib/shaders/: fractal-frag.glsl
source/shaders/: fractal-frag.glsl  fractal-vert.glsl  lighting-vert.glsl  passthrough-vert.glsl  solid-frag.glsl  solid-vert.glsl  transparent-frag.glsl  transparent-vert.glsl
